correct  .recordsBox  overflow: hidden;

--- a/styles.css
+++ b/styles.css
@@ -317,6 +317,7 @@ button#records {
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: flex-start;
+  overflow: hidden;
 }
 
 .recordsBox__header {
